--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <img src="img/portfolio/fintech3.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
+        <!-- <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
@@ -222,7 +222,7 @@
                 <small>Web Design</small> </div>
               <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
