--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h4>SQL</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">65</span> </span>
-        <h4>Adobe Photoshop</h4>
+        <h4>Adobe Illustrator</h4>
       </div>
     </div>
   </div>
