--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               </div>
               <div class="timeline-body">
                 <p>Redesigned Cornell's Global Economics and Finance Society's website which improved fluidity and architecture through stakeholder meetings, user testing, and various wireframe
-                models. (Cornellgefs.com)</p>
+                models. (cornellgefs.com)</p>
               </div>
             </div>
           </li>
@@ -311,7 +311,7 @@
                 <h4 class="subheading">UX Designer</h4>
               </div>
               <div class="timeline-body">
-                <p>Co-developed an online ecommerce platform (www.zenfarishop.com). Worked closely with CEO & CTO to ensure thematic aspects of the website relate closely with company model. </p>
+                <p>Co-developed an online ecommerce platform (www.zenfari-shop.com). Worked closely with CEO & CTO to ensure thematic aspects of the website relate closely with company model. </p>
               </div>
             </div>
           </li>
