--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <h4 class="subheading">UX Designer</h4>
               </div>
               <div class="timeline-body">
-                <p>Co-developed an online ecommerce platform (www.zenfari-shop.com). Worked closely with CEO & CTO to ensure thematic aspects of the website relate closely with company model. </p>
+                <p>Co-developed an online ecommerce platform. Worked closely with CEO & CTO to ensure thematic aspects of the website relate closely with company model.(www.zenfari-shop.com) </p>
               </div>
             </div>
           </li>
