--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="about-text">
           <p>Archie is currently a Junior at Cornell University pursuing a Bachelor of Arts in Information Science and Economics. His work focuses on UI/UX, Front-End Engineering and has worked on various projects ranging from individual projects to professional assignments at companies such as The FinTech Portfolio, Zenfari-Clothing, and Cornell GEFS.</p>
           <p>On campus, he is the Vice President of IT for Cornell's Global Economics & Finance Society as well as Vice President of Marketing for Cornell Bears. In his free time he enjoys listening to music, fishing, and playing competitive volleyball.</p>
-          <p class="text-center"><a class="btn btn-primary" href="img/ArchieKong_Resume.pdf" target="_"><i class="fa fa-download"></i> View Resume</a></p>
+          <p class="text-center"><a class="btn btn-primary" href="img/Archie_Kong_Resume.pdf" target="_"><i class="fa fa-download"></i> View Resume</a></p>
         </div>
       </div>
     </div>
