--- a/index.html
+++ b/index.html
@@ -180,16 +180,18 @@
               <img src="img/portfolio/fintech3.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <!-- <div class="col-sm-6 col-md-3 col-lg-3 app">
+        <div class="col-sm-6 col-md-3 col-lg-3 branding web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Zenfari</h4>
+                <small>Branding/UX Design</small> </div>
+              <img src="img/portfolio/zenfari.png" class="img-responsive" alt="Project Title">
+              <img src="img/portfolio/zenfari2.png" class="img-responsive" alt="Project Title">
+              <img src="img/portfolio/zenfari3.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
+        <!-- <div class="col-sm-6 col-md-3 col-lg-3 branding">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
