--- a/index.html
+++ b/index.html
@@ -137,29 +137,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <a href="https://www.behance.net/gallery/43055457/Redesign-Cornell-Global-Economics-Finance-Society?" target="_blank"> 
-            <div class="hover-bg"> 
-              <div class="hover-text">
-                <h4>Cornell GEFS</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/gefs.png" class="img-responsive" alt="Project Title"> 
-              <img src="img/portfolio/gefs2.png" class="img-responsive" alt="Project Title"></a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-          <a href="https://www.behance.net/gallery/43170647/Redesign-Ithaca-Apple-Harvest-Festival" target="_blank">
-            <div class="hover-bg">
-              <div class="hover-text">
-                <h4>Apple Fest</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/applefest.png" class="img-responsive" alt="Project Title"> 
-              <img src="img/portfolio/applefest3.png" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-          <a href="https://www.behance.net/gallery/43176051/Personal-Website" target="_blank">
+            <a href="https://www.behance.net/gallery/43176051/Personal-Website" target="_blank">
             <div class="hover-bg"> 
               <div class="hover-text">
                 <h4>Personal Website</h4>
@@ -177,18 +155,45 @@
                 <small>Web Design</small> </div>
               <img src="img/portfolio/fintech.png" class="img-responsive" alt="Project Title"> 
               <img src="img/portfolio/fintech2.png" class="img-responsive" alt="Project Title">
-              <img src="img/portfolio/fintech3.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/fintech3.png" class="img-responsive" alt="Project Title"> </a> 
+           </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <a href="https://www.behance.net/gallery/43055457/Redesign-Cornell-Global-Economics-Finance-Society?" target="_blank"> 
+            <div class="hover-bg"> 
+              <div class="hover-text">
+                <h4>Cornell GEFS</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/gefs.png" class="img-responsive" alt="Project Title"> 
+              <img src="img/portfolio/gefs2.png" class="img-responsive" alt="Project Title"></a>
+           </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> 
               <div class="hover-text">
                 <h4>Zenfari</h4>
                 <small>Branding/UX Design</small> </div>
               <img src="img/portfolio/zenfari.png" class="img-responsive" alt="Project Title">
               <img src="img/portfolio/zenfari2.png" class="img-responsive" alt="Project Title">
-              <img src="img/portfolio/zenfari3.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/zenfari3.png" class="img-responsive" alt="Project Title"> </a>
+          </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <a href="https://www.behance.net/gallery/43170647/Redesign-Ithaca-Apple-Harvest-Festival" target="_blank">
+            <div class="hover-bg">
+              <div class="hover-text">
+                <h4>Apple Fest</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/applefest.png" class="img-responsive" alt="Project Title"> 
+              <img src="img/portfolio/applefest3.png" class="img-responsive" alt="Project Title"> </a>
+           </div>
           </div>
         </div>
         <!-- <div class="col-sm-6 col-md-3 col-lg-3 branding">
