--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h4>PHP</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">70</span> </span>
-        <h4>Swift</h4>
+        <h4>Angular.JS</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">70</span> </span>
         <h4>SQL</h4>
