--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding web">
           <div class="portfolio-item">
-            <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <a href="https://www.behance.net/gallery/43371681/Zenfari-BrandingUX-Design" target="_blank">
             <div class="hover-bg"> 
               <div class="hover-text">
                 <h4>Zenfari</h4>
