--- a/index.html
+++ b/index.html
@@ -196,16 +196,22 @@
            </div>
           </div>
         </div>
-        <!-- <div class="col-sm-6 col-md-3 col-lg-3 branding">
+
+        <div class="col-sm-6 col-md-3 col-lg-3 app branding">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
+            <a href="https://www.behance.net/gallery/43892799/BEARS-Mobile-App-Prototype-Branding" target="_blank">
+            <div class="hover-bg">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Branding</small> </div>
-              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>BEARS</h4>
+                <small>App Development</small> </div>
+              <img style="" src="img/portfolio/bearsfinal.png" class="img-responsive" alt="Project Title"> 
+               </a>
+           </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
+
+
+        <!-- <div class="col-sm-6 col-md-3 col-lg-3 branding app">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
