--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Archie Kong - UI/UX Designer & Front End Engineer</title>
+<title>Archie C Kong - UI/UX Designer & Front End Engineer</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
