--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <h1>Archie<span class="name">C Kong</span></h1>
+          <h1>Archie<span class="name"> Kong</span></h1>
           <p>UI/UX Designer & Front End Engineer</p>
           <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
 
